--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
       - run: npm run test:e2e
 
   deploy:
+    executor:
+      name: default
     steps:
       - checkout
       - setup_npm
